--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"displayName": "makeThingsAndSmile Icons",
 	"description": "A really cool icon theme we made for you.",
 	"version": "1.0.0",
-	"publisher": "https://www.instagram.com/makethingsandsmile",
+	"publisher": "caelicarp",
 	"author": {
 		"email": "caelicarp@gmail.com",
 		"name": "Carlos Angel",
