--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 	],
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/caelicarp/make-things-and-smile-theme",
+		"url": "https://github.com/caelicarp/make-things-and-smile-theme"
+	},
 	"engines": {
 		"vscode": "^1.59.0"
 	},
